--- a/project p1.html
+++ b/project p1.html
@@ -68,6 +68,9 @@
           
           <div style="padding-left:16px">
           </div>
+          <script>
+            var fname= ("fname").value
+          </script>
         <img class="imgd" src="download.jpeg" alt="an image of PRISON" height="70" width="90"/> <br><br><br>
        <label for="fname">First name</label>
        <input type="text" id="fname" name="fname" required maxlength="16" placeholder="firstname" > <br><br><br>
