--- a/assignment.html
+++ b/assignment.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <html>
 <title>units in ict</title>
-<head>units in modules</head>
 <style>
 head{
     font-weight: bold;
     color: rgb(128, 128, 128);
 }
 body{
-    background-color: skyblue;
+    background-color: rgb(9, 57, 77);
     display: block;
     text-align: center;
+    color: white;
+ 
 }
 h1{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -43,6 +44,7 @@ h3{
 }
 </style>
 <body>
+    <img src="iy.jpeg" alt="image"><br><br>
 <h1>module 1</h1>
 <p>ICT AND ETHICS</p>
 <p>OS</p>
@@ -67,7 +69,207 @@ h3{
 <p>DCOMM</p>
 <p>PPM</p>
 <hr class="hr"/>
+    <table border="1" align="center">
+        <tr>
+            <th colspan="4">LESSONS LEARNT IN NYS</th>
+        </tr>
 
+        <TR>
+            <TH colspan="4">ACADEMIC YEAR OF 2023</TH>
+        </TR>
+        <TR>
+            <TH colspan="4">TERM 3 TIMETABLE</TH>
+        </TR>
+        <TR>
+            <TH colspan="4">MODULE 1</TH>
+        </TR>
+        <TR>
+            <TH>DAY</TH>
+            <TH>MORNING</TH>
+            <TH>MIDMORNING</TH>
+            <TH>AFTERNOON</TH>
+        </TR>
+        <TR>
+            <TH>MONDAY</TH>
+            <TH>OS</TH>
+            <TH>ICT AND ETHICS</TH>
+            <TH>CAPPS 1</TH>
+        </TR>
+        <TR>
+            <TD>TUESDAY</TD>
+            <TD>BUSINESS PLAN</TD>
+            <TD>MATHS</TD>
+            <TD>COMMUNICATION</TD>
+        </TR>
+        <TR>
+            <TD>WEDNSDAY</TD>
+            <TD>CAPPS 1</TD>
+            <TD>ICT AND ETHICS</TD>
+            <TD>GAMES</TD>
+        </TR>
+        <TR>
+            <TD>THURSDAY</TD>
+            <TD>MATHS</TD>
+            <TD>COMMUNICATION</TD>
+            <TD>STP</TD>
+        </TR>
+        <TR>   
+            <TD>FRIDAY</TD>
+            <TD>OS</TD>
+            <TD>ICT AND ETHICS</TD>
+            <TD>BUSINESS PLAN</TD> 
+
+        </TR>
+        <tr>
+    <TR>
+        <TH colspan="4">MODULE 11</TH>
+    </TR>
+    <TR>
+        <TH>DAY</TH>
+        <TH>MORNING</TH>
+        <TH>MIDMORNING</TH>
+        <TH>AFTERNOON</TH>
+    </TR>
+    <tr>
+        <TD>MONDAY</TD>
+        <td>CAPPS 11</td>
+        <TD>LIB</TD>
+        <TD>SAD</TD>
+    </tr>
+<TR>
+    <TD>TUESDAY</TD>
+    <td>QM</td>
+    <TD>LIB</TD>
+    <TD>OOP</TD>
+</TR>
+<TR>
+    <TD>WEDNSDAY</TD>
+    <td>VB</td>
+    <TD>DBMS</TD>
+    <TD>GAMES</TD>
+</TR>
+<TR>
+    <TD>THURSDAY</TD>
+    <td>CAPPS 11</td>
+    <TD>QM</TD>
+    <TD>SAD</TD>
+</TR>
+<TR>
+    <TD>FRIDAY</TD>
+    <td>DBMS</td>
+    <TD>LIB</TD>
+    <TD>VB</TD>
+</TR>
+<TR>
+    <TH colspan="4">MODULE 111</TH>
+</TR>
+    <TR>
+        <TH>DAY</TH>
+        <TH>MORNING</TH>
+        <TH>MIDMORNING</TH>
+        <TH>AFTERNOON</TH>
+    </TR>
+    <TR>
+       
+        <TD>MONDAY</TD>
+        <td>IBP</td>
+        <TD>DCOMM</TD>
+        <TD>IMS</TD> 
+    </TR>
+    <TR>
+
+        <TD>TUESDAY</TD>
+        <td>PROJECT</td>
+        <TD>LIB</TD>
+        <TD>PPM</TD>
+    </TR>
+    <TR>
+
+        <TD>WEDNSDAY</TD>
+        <td>LIB</td>
+        <TD>PPM</TD>
+        <TD>GAMES</TD>
+    </TR>
+    <TR>
+
+        <TD>THURSDAY</TD>
+        <td>DCOMM</td>
+        <TD>IBP</TD>
+        <TD>IMS</TD>
+    </TR>
+    <TR>
+        
+        <TD>FRIDAY</TD>
+        <td>LIB</td>
+        <TD>PROJECT</TD>
+        <TD>LIB</TD>
+    </TR>
+</tABLE> <br> <br>
+    <hr/>
+    <br> <br>
+    <DIV>
+        <P>ACADEMIC DEPARTMENT</P>
+    </DIV>
+    <table border="1" align="center" >
+    <TR>
+        <TH colspan="5">DEPARTMENT OF ACADEMICS</TH>
+    </TR>
+    <TR>
+        <TH colspan="5">NAME OF LECTURES IN IBS</TH>
+    </TR>
+    <TR>
+        <TH>NAME</TH>
+        <TH>GENDER</TH>
+        <TH>CONTACT</TH>
+        <TH>CITY</TH>
+        <th>SUBJECT</th>
+    </TR>
+    <TR>
+        <TD>PROFF JIM</TD>
+        <TD rowspan="2">MALE</TD>
+        <TD>011234557</TD>
+        <TD>NAIROBI</TD>
+        <TD>OS & ICT AND ETHICS</TD>
+
+    </TR>
+    <TR>
+        <TD>PROFF SAMUEL</TD>
+        <TD>0565656522672</TD>
+        <TD>KISUMU</TD>
+        <TD>OOP&DBMS</TD>
+    </TR>
+    <tr>
+        <td>MISS GRACE</td>
+        <TD rowspan="2">FEMALE</TD>
+        <TD>0987890</TD>
+        <TD>NAIVASHA</TD>
+        <TD>MATHS & QM</TD>
+    </tr>
+    <TR>
+        <TD>MISS ZUMA</TD>
+        <TD>08756677</TD>
+        <TD rowspan="4">LIMURU</TD>
+        <TD>SAD & MIS</TD>
+    </TR>
+    <TR>
+        <TD>PROFF GEORGE</TD>
+        <TD>MALE</TD>
+        <TD>03434678</TD>
+        <TD>STP & BUSINESS PLAN</TD>
+    </TR>
+    <TR>
+        <TD>PROFF JULIE</TD>
+        <TD>FEMALE</TD>
+        <TD>012728822</TD>
+        <TD>IBP</TD>
+    </TR>
+    <TR>
+        <TD>PROFF IGNETIOUS</TD>
+        <TD>MALE</TD>
+        <TD>098976654</TD>
+        <TD>PROJECT</TD>
+    </TR>
+</tABLE>
 <marquee class="cl" behavior="left">
     welcome to ICT <br> <br>
     we offer 100%
@@ -76,6 +278,4 @@ h3{
     Please edit me!!!!
     </div>
 </body>
-
-
 </html>
