--- a/assignment.html
+++ b/assignment.html
@@ -42,6 +42,15 @@ h3{
 .hr{
     line-height: 0cqmax;
 }
+.jim{
+    background-color: blue;
+}
+.mop{
+    background-color: olive;
+}
+.ji{
+    background-color: orange;
+}
 </style>
 <body>
     <img src="iy.jpeg" alt="image"><br><br>
@@ -127,7 +136,6 @@ h3{
     <TR>
         <TH>DAY</TH>
         <TH>MORNING</TH>
-        <TH>MIDMORNING</TH>
         <TH>AFTERNOON</TH>
     </TR>
     <tr>
@@ -226,7 +234,7 @@ h3{
     </TR>
     <TR>
         <TD>PROFF JIM</TD>
-        <TD rowspan="2">MALE</TD>
+        <TD rowspan="2" class="ji">MALE</TD>
         <TD>011234557</TD>
         <TD>NAIROBI</TD>
         <TD>OS & ICT AND ETHICS</TD>
@@ -240,7 +248,7 @@ h3{
     </TR>
     <tr>
         <td>MISS GRACE</td>
-        <TD rowspan="2">FEMALE</TD>
+        <TD rowspan="2" class="mop">FEMALE</TD>
         <TD>0987890</TD>
         <TD>NAIVASHA</TD>
         <TD>MATHS & QM</TD>
@@ -248,7 +256,7 @@ h3{
     <TR>
         <TD>MISS ZUMA</TD>
         <TD>08756677</TD>
-        <TD rowspan="4">LIMURU</TD>
+        <TD rowspan="4" class="jim">LIMURU</TD>
         <TD>SAD & MIS</TD>
     </TR>
     <TR>
@@ -264,7 +272,7 @@ h3{
         <TD>IBP</TD>
     </TR>
     <TR>
-        <TD>PROFF IGNETIOUS</TD>
+        <TD >PROFF IGNETIOUS</TD>
         <TD>MALE</TD>
         <TD>098976654</TD>
         <TD>PROJECT</TD>
