--- a/signup.html
+++ b/signup.html
@@ -20,10 +20,10 @@
     <html>
         <body>
             <header style="text-align: center;align-items: center;" >
-                <img src="imst.jpeg" alt="image of kenya prisons">
+                <img src="signup.png" alt="image of kenya prisons">
 
             </header>
-            <form action="yes">
+            <form action="post">
                 <label for="serviceNumber" id="serviceNumber">ServiceNumber</label>
                 <input type="text" required > <br> <br> <br> <br>
                 <label for="IdNumber" id="IdNumber">IdNumber</label>
@@ -36,6 +36,8 @@
                 <input type="text" required> <br> <br> <br> <br>
                 <label for="Department" id="Department">Department</label>
                 <input type="text" required> <br><br><br>
+                <label for="email"id="email">email</label>
+                <input type="text" maxlength="40" required><br><br>
                 <button>submit</button>
             </form>
         </body>
